# LogisticUtils

./: .gitignore  LICENSE  README.md  TODO.md
docs/design/: clickpost-output.md
frontend/: index.html  package.json  tsconfig.json
frontend/src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: browser.rs  main.rs  parser.rs
